--- a/src/assets/css/theme/theme.scss
+++ b/src/assets/css/theme/theme.scss
@@ -32,7 +32,7 @@ $swipe-height : 4.0rem;
 
 //控制器高度
 $control-height : 1.5rem;
-$control-color : #fff;
+$control-color : rgba(0,0,0,.3);
 
 //songList 样式
 
