--- a/src/assets/css/views/player.scss
+++ b/src/assets/css/views/player.scss
@@ -58,11 +58,16 @@
                 .playTime,.maxTime{
                     font-size: 12px;
                     line-height:$Time-height;
-                    padding: 0 0.1rem; 
+                    padding: 0 0.25rem; 
                 }
                 .progress-box{
                     flex-grow: 1;
                     position: relative;
+                    box-sizing: border-box;
+                    padding-top: 0.210rem;
+                    .van-slider__button{
+                        width: 12px;height: 12px;
+                    }
                     .yuanxk{
                         height: $Time-height;
                         width: $Time-height;
