--- a/src/assets/css/views/home/header.scss
+++ b/src/assets/css/views/home/header.scss
@@ -101,14 +101,16 @@
 		height:1.44rem;
 		display:flex;flex-direction:row;
 		background-color:$color-theme;
-			box-shadow:0px 0.025rem 0.075rem #333333;
+		box-shadow:0px 0.025rem 0.075rem #333333;
 		.out{
-			width:3.8em;
-			box-sizing: border-box;
-			padding-top: .15rem;
-			padding-left: .2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 1.44rem;
 			i{
-				font-size: 1.1rem;
+                display: block;
+                font-size: 25px;
+                font-weight: bold;
 			}
 		}
 		.input{
@@ -121,32 +123,45 @@
 				.inSearch{
 					box-sizing:border-box;
 					width:100%;height:100%;
-					border:0;border-bottom:0.025rem solid #000;
+					border:0;
 				}
 
 			}
 
 		}
 	}
-	.hotSea{
+	.popular-search{
 		height:5.6rem;
-		background-color:#888; 
-		.text{
+		.title{
+            font-size: 16px;
 			height:0.8rem;
-			padding:0.32rem;
-			line-height:0.8rem;
+			padding: 5px 15px;
+            line-height:0.8rem;
+            font-weight: 500;
 		}
-		.hotList{
+		.popular-search-list{
 			padding:0 1.4rem 0 0.48rem;
 			display:flex;
-			flex-wrap:wrap;
+            flex-wrap:wrap;
 			li{
 				height:0.4rem;
 				padding:0.32rem;
 				margin:0.2rem 0.2rem 0 0;
 				border:0.025rem solid #fff;
 				border-radius:0.4rem;
-			}
+            }
+            .tag{
+                height: 34px;
+                padding: 0 16px;
+                background-color: #DCDCDC;
+                border-radius:17.5px;
+                box-sizing: border-box;
+                line-height: 34px;
+                text-align: center;
+                span{
+                    font-size: 14px;
+                }
+            }
 		}
 	}
 	.history{
