--- a/src/assets/css/views/home/control.scss
+++ b/src/assets/css/views/home/control.scss
@@ -1,6 +1,6 @@
 .control{
   width: 100vw;
-  height: $control-height;
+  height: 100px;
   background-color: $control-color;
   position: fixed;
   bottom: 0;
